--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,23 +4,40 @@
 <head>
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
-	
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link href="css/hci-friends.css" rel="stylesheet">
 </head>
 
 <body>
-	<h1>My HCI Friends</h1>
+	<div class="container">
+		<h1>My HCI Friends</h1>
+		{{#each friends}}
+		<div class="friends" id="{{id}}">
+			<img src={{imageURL}} alt="friend" class="img-responsive img-rounded">
+			<a href="#" class="friendName"><h3>{{name}}</h3></a>
+			{{description}}
+			<hr>
+		</div>
+		{{/each}}
+		<form id="addFriendForm" role="form" method="get" action="/add">
+			<h3>Add a friend</h3>
+		    <div class="form-group">
+		      <label for="name">Name:</label>
+		      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+		    </div>
+		    <div class="form-group">
+		      <label for="description">Description:</label>
+		      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
+		    </div>
+		    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 
-	<form id="addFriendForm" role="form" method="get" action="/add">
-		<h3>Add a friend</h3>
-	    <div class="form-group">
-	      <label for="name">Name:</label>
-	      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
-	    </div>
-	    <div class="form-group">
-	      <label for="description">Description:</label>
-	      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
-	    </div>
-	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
-	</form>
+		</form>
+
+	</div>
+	<script src="js/jquery-1.11.0.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/hci-friends.js"></script>
+
 </body>
 </html>
